# gridnomad

./: .gitignore  AGENTS.md  ada_decision.json  components.json  decision.json  gridnomad.py  kaia-decision.json  lina-decision.json  package-lock.json  package.json  probe_output.txt  pyproject.toml  scratch_probe.mjs  sitecustomize.py  temp_decision.json
.tmp-opencode-live/: events.jsonl
app/: globals.css  layout.js  page.js
components/: atlas-metrics.jsx  civilization-settings-sheet.jsx  gridnomad-dashboard.jsx  inspector-tabs.jsx  pixel-world-map.jsx  simulation-console.jsx  world-toolbar.jsx
components/ui/: badge.jsx  button.jsx  card.jsx  input.jsx  scroll-area.jsx  select.jsx  separator.jsx  sheet.jsx  tabs.jsx
data/: civilization-settings.json  decision.json  output.json  test_probe.js
data/runtime-scenarios/: runtime-1774183424729-de2dvb4j.json
decisions/: arlo-decision.json  cleo-decision.json  mara_decision.json  milo-decision.json  soren_decision.json  yuna_decision.json
lib/: civilization-setup.js  gridnomad-store.js  world-atlas.js
scenarios/: frontier_seeded.json  river_fork.json  scratch_opencode_test.json  test_minimax_8_agents.json  two_factions_eight_agents.json
src/gridnomad/: __init__.py  __main__.py  cli.py
test-results/: .last-run.json
test-results/tests-home-exercise-OpenCode-browser-setup-flow/: error-context.md
tests/: civilization-setup.test.mjs  helpers.py  home.spec.ts  test_cli.py  test_generation.py  test_prompt_and_validation.py  test_provider_routing.py  test_scenario.py  test_simulation.py
(+29 files in other folders)
