[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gridnomad"
version = "0.1.0"
description = "Headless pixel-world civilization simulator backend."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.57.1",
    "google-genai>=1.26.0",
    "openai>=1.93.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
